--- a/src/styles/designSystem.css
+++ b/src/styles/designSystem.css
@@ -155,6 +155,14 @@
   font-weight: bold;
 }
 
+.navbar__logo--sub-text{
+  font-size: var(--h3);
+  font-family: var(--font-2);
+  font-weight: 100;
+  color: var(--color-white-100);
+  padding: 0 400px ;
+}
+
 .navbar__menu{
   display: flex;
   direction: row;
